[package]
name = "openfhe"
version = "0.3.2"
edition = "2021"
description = "Rust package of the OpenFHE Fully Homomorphic Encryption Library."
license = "BSD-2-Clause"
documentation = "https://openfhe-rust-wrapper.readthedocs.io/"
repository = "https://github.com/fairmath/openfhe-rs"

[dependencies]
cxx = { git = "https://github.com/MachinaIO/cxx.git", branch = "feat/partial-eq-trait" }

[build-dependencies]
cxx-build = "1.0"

