[package]
name = "openfhe"
version = "0.3.2"
edition = "2021"
description = "Rust package of the OpenFHE Fully Homomorphic Encryption Library."
license = "BSD-2-Clause"
documentation = "https://openfhe-rust-wrapper.readthedocs.io/"
repository = "https://github.com/fairmath/openfhe-rs"

[dependencies]
cxx = { git = "https://github.com/rkdud007/cxx.git", branch = "feat/clone" }
num-bigint = { version = "0.4", default-features = false }
num-traits = "0.2"



[build-dependencies]
cxx-build = "1.0"

